rahti/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: http
  # Terminate TLS at the Rahti router and redirect plain HTTP requests to HTTPS.
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
